--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body {
     width: 50%;
     border: none;
     background-color: #04AA6D;
-    padding: 10px 0px;
+    padding: 10px 5px;
     font-size: 16px;
     cursor: pointer;
     text-align: center;
@@ -44,6 +44,7 @@ body {
 
 .flex-parent {
     display: flex;
+    align-items: center;
     }
       
 .jc-center {
@@ -51,5 +52,5 @@ body {
     }
       
 button.margin-right {
-    margin-right: 20px;
+    margin-right: 0px;
     }
