--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-/* CSS HEX */
 :root {
     --blue-ncs: #2e86abff;
     --eggshell: #F8F4E3;
@@ -6,24 +5,37 @@
     --rich-black-fogra-29: #0d1317ff;
     --dark-moss-green: #3f612dff;
 }
-
+h1{
+    margin: 0;
+    padding: 0;
+    color:var(--eggshell);
+    text-align: center;
+}
+h2{
+    margin: 0;
+    padding: 0;
+    color:var(--eggshell);
+    text-align: center;
+}
+.file-input {
+    color:var(--eggshell);
+    justify-content:center;
+    text-align: center;
+    margin: auto;
+}
 body {
-    padding-left: 10%;
-    padding-right: 10%;
-    font-family: Georgia, "Times New Roman",
-          Times, serif;
-    color: var(--oxford-blue);
-    background-color: var(--eggshell) }
-
-h1 {
-    color: var(--blue-ncs);
-    text-align: center;
+  margin: 0;
+  padding: 0;
+  background: var(--rich-black-fogra-29)
 }
+.flex-parent {
+    display: flex;
+    align-items: center;
+    }
 
-.doctitle {
-    text-align: center;
+.jc-center {
+    justify-content: center;
 }
-
 .block {
     display: block;
     width: 50%;
@@ -34,38 +46,26 @@ h1 {
     font-size: 16px;
     cursor: pointer;
     text-align: center;
-    }
-
-.flex-parent {
-    display: flex;
-    align-items: center;
-    }
-
-.jc-center {
-    justify-content: center;
-    }
-
-.harold {
-    padding-left: 25%;
-    padding-right: 25%;
+}
+.square {
+  width: 80vmin;
+  height: 80vmin;
 }
 
-.display {
-	text-align: center;
-	background-color: var(--blue-ncs);
-	border-style: groove;
-	width: 100%;
-	padding-top: 100%;
-	border-radius: 50%;
-	vertical-align: middle;
-	position: relative;
-
+.square.center {
+  margin-top: calc((100vh - 90vmin)/2);
+  margin-left: calc((100vw - 80vmin)/2);
 }
 
-
-.single {
-    font-size: 16px;
-    font-size: 50vh;
-    /*display: inline-block;*/
-    vertical-align: middle;
+.bg {
+  background-color: var(--blue-ncs);
+  border-style: inset;
+  border-radius: 50%;
+}
+.content
+{
+  line-height:0.9;
+  vertical-align: center;
+  text-align:center;
+  font-size: 80vmin;
 }
